# swarmer.next

./: .gitignore  README.md
.github/workflows/: maven.yml  node.js.yml
backend/: .gitignore  finance.service  pom.xml
backend/app/: Dockerfile  dump.sql  pyproject.toml  swarmer.db:Zone.Identifier  upgrade.sql
backend/app/app/: crud.py  database.py  main.py
backend/app/app/core/: config.py
backend/app/app/crud/: crud.py
backend/app/app/models/: __init__.py  account.py  category.py  rule.py  transaction.py  user.py
backend/app/app/schemas/: __init__.py  account.py  category.py  statistics.py  transaction.py  user.py
backend/src/main/resources/: application-default.properties  application-prod.properties
backend/src/test/resources/: application-test.properties  export_2023-03-29T14_09.json
frontend/: angular.json  karma.conf.js  package-lock.json  package.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts  app.routing.module.ts  app.state.ts
frontend/src/app/accounts/: account-dlg.component.html  account-dlg.component.scss  account-dlg.component.ts  accounts.component.html  accounts.component.scss  accounts.component.spec.ts  accounts.component.ts  accounts.state.spec.ts  accounts.state.ts
frontend/src/app/auth/: auth.guard.spec.ts  auth.guard.ts  error.interceptor.ts  jwt.interceptor.ts  login.component.html  login.component.spec.ts  login.component.ts  registration.component.html  registration.component.scss  registration.component.ts
(+123 files in other folders)
